# pytemppack

./: CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: testing.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  example.nblink  index.rst
docs/source/_autosummary/: py_pack.py_pack.PyPack.rst  py_pack.py_pack.rst  py_pack.rst  py_pack.utils.generate_random_array.rst  py_pack.utils.is_valid_ndarray.rst  py_pack.utils.rst  pytemppack.py_pack.PyPack.rst  pytemppack.py_pack.rst  pytemppack.rst  pytemppack.utils.generate_random_array.rst  pytemppack.utils.is_valid_ndarray.rst  pytemppack.utils.rst
examples/: example.ipynb
pytemppack/: __init__.py  py_pack.py  utils.py
tests/: test_py_pack.py  test_utils.py
