[build-system]
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytemppack"
version = "0.0.0"
description = "A python package template with poetry"
license = "MIT"
authors = [
  "Andres Algaba <andres.algaba@vub.be>"
]
maintainers = [
  "Andres Algaba <andres.algaba@vub.be>"
]
readme = "README.rst"
homepage = "https://www.andresalgaba.com/"
repository = "https://github.com/AndresAlgaba/pytemppack"
documentation = ""
keywords = [
  "python",
  "package",
  "template",
  "poetry"]
packages = [
  { include = "pytemppack" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = ">=1.22.3"
pandas = ">=1.4.2"

[tool.poetry.dev-dependencies]
jupyter = ">=1.0.0"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
mypy = ">=0.942"
isort = ">=5.10.1"
black = ">=22.3.0"
flake8 = ">=4.0.1"
Sphinx = ">=4.5.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.18.2"
nbsphinx = ">=0.8.8"
nbsphinx-link = ">=1.3.0"
poetry-dynamic-versioning = ">=0.17.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = "*/__init__.py"

[tool.black]
line-length = 79
target-version = ["py39"]
include_trailing_comma = true
extend-exclude = '''
  docs
'''

[tool.isort]
py_version=39
line_length = 79
profile = "black"
extend_skip_glob = ["docs/*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
exclude = "docs"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
